fix a spacing issue

--- a/src/sass/contact.sass
+++ b/src/sass/contact.sass
@@ -40,4 +40,4 @@ ul#contact-links
 
 @media (max-width: 600px)
     #contact
-        margin: 200px auto 100px
+        margin: 100px auto
